--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "geyser-grpc-connector"
-version = "0.13.1+yellowstone.5.0.0-solana.2.1"
+version = "0.13.1+yellowstone.10.0.0-solana.3.0"
 edition = "2021"
 
 description = "Multiplexing and Reconnection on Yellowstone gRPC Geyser client streaming"
@@ -9,11 +9,13 @@ authors = ["GroovieGermanikus <groovie@mango.markets>"]
 repository = "https://github.com/blockworks-foundation/geyser-grpc-connector"
 
 [dependencies]
-yellowstone-grpc-client = { version = "6.0.0", git = "https://github.com/rpcpool/yellowstone-grpc.git", tag = "v6.0.0+solana.2.2.12" }
-yellowstone-grpc-proto = { version = "6.0.0", git = "https://github.com/rpcpool/yellowstone-grpc.git", tag = "v6.0.0+solana.2.2.12" }
+yellowstone-grpc-client = { git = "https://github.com/rpcpool/yellowstone-grpc.git", tag = "v10.0.0+solana.3.0.0" }
+yellowstone-grpc-proto = { git = "https://github.com/rpcpool/yellowstone-grpc.git", tag = "v10.0.0+solana.3.0.0" }
 
-# required for CommitmentConfig
-solana-sdk = "~2.2.2"
+# required
+solana-commitment-config = "3"
+solana-signature = "3"
+solana-clock = "3"
 
 url = "2.5.0"
 async-stream = "0.3.5"
@@ -26,13 +28,17 @@ log = "0.4.17"
 tracing = "0.1.37"
 itertools = "0.10.5"
 
-tonic = "0.12"
-tonic-health = "0.12"
+tokio-stream = "~0.1.17"
+tonic = "~0.14.0"
+tonic-build = "~0.14.0"
+tonic-prost = "~0.14.0"
+tonic-prost-build = "~0.14.0"
+tonic-health = "~0.14.0"
 
 [dev-dependencies]
 tracing-subscriber = "0.3.16"
-solana-logger = "2"
-solana-account-decoder = "~2.2.7"
+solana-logger = "3"
+solana-account-decoder = "~3.0.2"
 
 base64 = "0.21.5"
 bincode = "1.3.3"
