--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,6 @@ yellowstone-grpc-proto = { git = "https://github.com/rpcpool/yellowstone-grpc.gi
 
 # required
 solana-commitment-config = "3"
-solana-signature = "3"
 solana-clock = "3"
 
 url = "2.5.0"
@@ -39,7 +38,11 @@ tonic-health = "~0.14.0"
 tracing-subscriber = "0.3.16"
 solana-logger = "3"
 solana-account-decoder = "~3.0.2"
+solana-signature = "3"
+solana-pubkey = "3"
+solana-hash = "3"
 
+bs58 = "0.5.1"
 base64 = "0.21.5"
 bincode = "1.3.3"
 csv = "1.3.0"
