add borsh and compute budget

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,8 +39,14 @@ tracing-subscriber = "0.3.16"
 solana-logger = "3"
 solana-account-decoder = "~3.0.2"
 solana-signature = "3"
+solana-message = "3"
+solana-transaction = "3"
 solana-pubkey = "3"
 solana-hash = "3"
+solana-compute-budget = "3"
+solana-compute-budget-interface = { version = "3", features = ["borsh"] }
+solana-sdk-ids = "3"
+solana-borsh = "3"
 
 bs58 = "0.5.1"
 base64 = "0.21.5"
