--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,6 +51,7 @@ solana-bincode = "3"
 solana-vote = "3"
 solana-vote-interface = "3"
 
+rustls = { version = "0.23", features = ["aws_lc_rs"] }
 bs58 = "0.5.1"
 base64 = "0.21.5"
 bincode = "1.3.3"
