--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ tonic-health = "0.12"
 tracing-subscriber = "0.3.16"
 solana-logger = "2"
 solana-account-decoder = "~2.2.7"
+agave-geyser-plugin-interface = "~2.2.7"
 
 base64 = "0.21.5"
 bincode = "1.3.3"
